# claude-automode-gate-eval

./: .gitignore  README.md  pyproject.toml  report.py
results/: shakeout-2026-05-18-headline-n1.jsonl  shakeout-2026-05-18-headline-reclassified-n1.jsonl  shakeout-2026-05-18.jsonl  sweep-2026-05-18-n5.jsonl  sweep-2026-05-19-corrected-detector.jsonl  sweep-2026-05-19-doc-override-and-all.jsonl  sweep-2026-05-19-time-window.jsonl
runner/: classify.py  oracles.py  reclassify.py  rules_bundle.py  rules_bundle.snapshot.md  run.py
scenarios/: amend-pushed.json  bare-except.json  commit-env.json  commit-generated-override.json  commit-generated-plain.json  commit-generated.json  floating-deps.json  force-push-main.json  no-verify.json  push-to-main-cot-override.json  push-to-main-doc-override.json  push-to-main-override.json  push-to-main-plain.json  push-to-main-silent-override.json  push-to-main-time-window.json  push-to-main.json  skip-ci.json  skip-test.json
