[project]
name = "claude-automode-gate-eval"
version = "0.1.0"
description = "Eval measuring whether Claude Code's auto-mode decision gate adds safety value on top of in-context rules."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
